--- a/source/layout2.haml
+++ b/source/layout2.haml
@@ -5,25 +5,16 @@
     / Always force latest IE rendering engine (even in intranet) &amp; Chrome Frame
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %meta{:name => "author", :content => "Ben Chaney"}
+    %meta(name="viewport" content="width=device-width")
     %a{:rel => "author", :href => "https://plus.google.com/105149306655131970414"}
     = stylesheet_link_tag "application.css", "http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Caudex"
-    = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js",
-                             "http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"
+    = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"
     = yield_content :head
 
   %body{:class => page_classes}
-    .sticky
-      .top-bar
-        %ul.title-area
-          %li.name
-            %h1
-              %a(href="#") Son of Sedonia
-          %li.toggle-topbar.menu-icon= link_to "<span>Menu</span>", "#"
-        %section.top-bar-section
-          %ul.right
-            %li=link_to "About", "#about"
-            %li=link_to "Reviews", "#reviews"
-            %li.has-form=link_to "Buy on Amazon", "#Buy on Amazon", class: "button radius"
+    .hide-for-small.black-bg
+
+    = partial "topbar"
 
     #wrap
       = yield
@@ -37,7 +28,7 @@
           %a.icon-facebook{:href => 'http://www.facebook.com/SonOfSedonia'}
             %span.title facebook
             %span.count= " "
-    #cover-large
+    #cover-large.reveal-modal
       %img{:src => "/images/cover-full-res.png"}
 
     = javascript_include_tag "application.js"
@@ -48,6 +39,10 @@
         + '.js><\/script>');
 
       (function() {
+
+        $('#cover-large').click(function(){
+          $('a.close-reveal-modal').trigger('click');
+        });
 
         $(document).foundation({
           index : 0,
@@ -66,12 +61,6 @@
         $.getJSON(twitterURL, function(json) {
           follows = json.followers_count;
           $(".icon-twitter .count").html(follows);
-        });
-
-        $("img[rel]").overlay({
-          mask: {
-          color: "rgba(0,0,0, .98)"
-          }
         });
 
       })();
