--- a/source/layout2.haml
+++ b/source/layout2.haml
@@ -6,6 +6,7 @@
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %meta{:name => "author", :content => "Ben Chaney"}
     %meta(name="viewport" content="width=device-width")
+    %meta(name="apple-mobile-web-app-capable" content="yes")
     %a{:rel => "author", :href => "https://plus.google.com/105149306655131970414"}
     = stylesheet_link_tag "application.css", "http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Caudex"
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"
@@ -39,6 +40,8 @@
         + '.js><\/script>');
 
       (function() {
+
+        window.top.scrollTo(0, 1);
 
         $('#cover-large').click(function(){
           $('a.close-reveal-modal').trigger('click');
